--- a/Batch061/.classpath
+++ b/Batch061/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="C:/Users/Shubham/Downloads/gson-2.8.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Shubham/Downloads/easymock-4.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
